# ansible-collections-kowabunga

./: .gitignore  CHANGELOG.rst  README.md  conf.py  docsite.sh  galaxy.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docsite.yml  release.yml
changelogs/: changelog.yaml  config.yaml
docs/: releasing.md
meta/: runtime.yml
playbooks/: kahuna.yml  kaktus.yml  kiwi.yml
playbooks/group_vars/: kahuna.yml  kaktus.yml  kiwi.yml
plugins/doc_fragments/: kowabunga.py
plugins/module_utils/: kowabunga.py
plugins/modules/: project.py
roles/ansible/handlers/: main.yml
roles/ansible/meta/: argument_specs.yml  main.yml
roles/ansible/tasks/: main.yml
roles/ansible/templates/: ansible.env.j2  motd.sh.j2
roles/caddy/handlers/: main.yml
roles/caddy/meta/: argument_specs.yml  main.yml
roles/caddy/tasks/: main.yml
roles/caddy/templates/: caddy.sources.j2
roles/caddy/vars/: main.yml
roles/ceph/defaults/: main.yml
roles/ceph/handlers/: main.yml
roles/ceph/meta/: argument_specs.yml  main.yml
roles/ceph/tasks/: authentication.yml  clients.yml  filesystems.yml  format.yml  main.yml  manager.yml  metadata.yml  monitor.yml  nfs.yml  osd.yml  pools.yml  post.yml  pre.yml  systemd.yml
roles/ceph/templates/: ceph.conf.j2  ganesha.api.yml.j2  ganesha.conf.j2
roles/ceph/vars/: main.yml
roles/chrony/defaults/: main.yml
roles/chrony/handlers/: main.yml
roles/chrony/meta/: argument_specs.yml  main.yml
roles/chrony/tasks/: main.yml
roles/chrony/templates/: chrony.conf.j2
roles/chrony/vars/: main.yml
roles/kiwi/: README.md
(+221 files in other folders)
