[metadata]
name = ansible-collections-kowabunga.cloud
summary = Ansible collections for Kowabunga cloud
description_file =
    README.md

author = The Kowabunga Project
author_email = maintainers@kowabunga.cloud
home_page = https://github.com/kowabunga-cloud/ansible-collections-kowabunga/
classifier =
    License :: OSI Approved :: Apache 2.0
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/kowabunga/cloud/ = README.md
    share/ansible/collections/ansible_collections/kowabunga/cloud/roles/ = roles/*
    share/ansible/collections/ansible_collections/kowabunga/cloud/plugins/ = plugins/*
    share/ansible/collections/ansible_collections/kowabunga/cloud/playbooks/ = playbooks/*
    share/ansible/collections/ansible_collections/kowabunga/cloud/docs/ = docs/*
    share/ansible/collections/ansible_collections/kowabunga/cloud/meta/ = meta/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
